syntax = "proto3";

package track_info;

import "common/track.proto";

message TrackInfoRequest {
    string spotify_track_id = 1;
}

message TrackInfoResponse {
    common.Track track = 1;
}

service TrackInfoService {
    rpc GetTrackInfo (TrackInfoRequest) returns (TrackInfoResponse);
}